2012-05-24  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c:
    really fixed bug #3529152 - idata db doesn't generate object code in .lst file
  * doc/Makefile.am, doc/Makefile.in:
    fixed bug #3529377 - Out-of-source-tree make dist fails

2012-05-23  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/gplink.c: fixed typo
  * gpasm/lst.c:
    fixed bug #3529152 - idata db doesn't generate object code in .lst file
  * gpasm/testsuite/gpasm.project/hexfiles/*.hex:
    set svn:eol-style to native

2012-05-22  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c:
    fixed bug #3528790 - misleading warn of gplink

2012-05-19  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gperror.c: ixed bug #3528221 -
    gpasm generates the pagesel code for one page devices,
    generate relocation code for movlp instruction
  * gpasm/testsuite/gpasm.project/objasm/op14e.asm,
    gpasm/testsuite/gpasm.project/objfiles/op14e.o:
    added objfiles regression test for pic 14 bit enhanced devices

2012-05-16  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/Makefile.am, gplink/Makefile.am, gputils/Makefile.am:
    fixed bug #3517180 - Out-of-source-tree builds fail,
    thanx to Raphael Neider for the patfch
  * gpasm/Makefile.in, gplink/Makefile.in, gputils/Makefile.in:
    regenerated

2012-05-15  Marko Kohtala  <marko.kohtala@gmail.com>
  * libgputils/gpcofflink.c (gp_cofflink_patch_addr): Bug #3526882 fix
  relocation of RELOCT_BRA for pic14e.
  * gpasm/directive.c (do_insn): Bug #3526882 fix use of RELOCT_CONDBRA in
  place of RELOCT_BRA for pic14e "bra" instruction.

2012-04-27  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/cod.c (cod_write_symbols): Fix bug #3521796 reverting a change
  from revision 572.

2012-04-21  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/lst.c:
    fixed bug #3519850 - gplink fails to find source - patch attached
  * include/stdhdr.h: updated copyright year
